baml_language/crates/baml_tests/snapshots/diagnostic_errors/duplicate_attribute/baml_tests__diagnostic_errors__duplicate_attribute__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.AliasAndDescription {
  a: string
}
class user.SingleAlias {
  a: string
}
class user.TwoFieldAlias {
  a: string
}
class user.TwoFieldDescription {
  a: string
}
enum user.SingleVariantAlias {RED, BLUE}
enum user.TwoVariantAlias {ACTIVE, INACTIVE}
