baml_language/crates/baml_tests/snapshots/diagnostic_errors/duplicate_attribute/baml_tests__diagnostic_errors__duplicate_attribute__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.TwoFieldAlias {
  a: string @alias("first") @alias("second")
}
class user.TwoFieldDescription {
  a: string @description("first") @description("second")
}
enum user.TwoVariantAlias
class user.SingleAlias {
  a: string @alias("only")
}
class user.AliasAndDescription {
  a: string @alias("id") @description("the identifier")
}
enum user.SingleVariantAlias
class user.TwoFieldAlias$stream {
  a: string | null @alias("first") @alias("second")
}
class user.TwoFieldDescription$stream {
  a: string | null @description("first") @description("second")
}
class user.SingleAlias$stream {
  a: string | null @alias("only")
}
class user.AliasAndDescription$stream {
  a: string | null @alias("id") @description("the identifier")
}
