baml_language/crates/baml_tests/snapshots/diagnostic_errors/duplicate_attribute/baml_tests__diagnostic_errors__duplicate_attribute__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [hir] error: Duplicate attribute `@alias`
    ╭─[ duplicate_attribute.baml:12:28 ]
    │
 12 │   a string @alias("first") @alias("second")
    │            ───────┬─────── ────────┬───────  
    │                   ╰────────────────────────── `@alias` first applied here
    │                                    │         
    │                                    ╰───────── duplicate `@alias` — only the last takes effect
    │ 
    │ Note: Error code: E0014
────╯

  [hir] error: Duplicate attribute `@description`
    ╭─[ duplicate_attribute.baml:17:34 ]
    │
 17 │   a string @description("first") @description("second")
    │            ──────────┬────────── ───────────┬──────────  
    │                      ╰─────────────────────────────────── `@description` first applied here
    │                                             │            
    │                                             ╰──────────── duplicate `@description` — only the last takes effect
    │ 
    │ Note: Error code: E0014
────╯

  [hir] error: Duplicate attribute `@alias`
    ╭─[ duplicate_attribute.baml:22:23 ]
    │
 22 │   ACTIVE @alias("on") @alias("enabled")
    │          ──────┬───── ────────┬────────  
    │                ╰───────────────────────── `@alias` first applied here
    │                               │          
    │                               ╰────────── duplicate `@alias` — only the last takes effect
    │ 
    │ Note: Error code: E0014
────╯
